dist/LineScript-win64-20260616/tests/cases/compile_fail/game_fullscreen_bad_types.lsc
main() -> i64 do
  game_set_fullscreen("bad", true)
  return 0
end
